; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/libff/libff/extr_ff-util.c_get_codecs.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/libff/libff/extr_ff-util.c_get_codecs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AV_LOG_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [51 x i8] c"unable to allocate sorted codec array with size %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32***, i32*)* @get_codecs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_codecs(i32*** %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32***, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32*** %0, i32**** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* null, i32** %6, align 8
  store i32 0, i32* %8, align 4
  store i32 0, i32* %9, align 4
  br label %10

10:                                               ; preds = %14, %2
  %11 = load i32*, i32** %6, align 8
  %12 = call i32* @avcodec_descriptor_next(i32* %11)
  store i32* %12, i32** %6, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %17

14:                                               ; preds = %10
  %15 = load i32, i32* %8, align 4
  %16 = add i32 %15, 1
  store i32 %16, i32* %8, align 4
  br label %10

17:                                               ; preds = %10
  %18 = load i32, i32* %8, align 4
  %19 = call i32** @av_calloc(i32 %18, i32 8)
  store i32** %19, i32*** %7, align 8
  %20 = load i32**, i32*** %7, align 8
  %21 = icmp eq i32** %20, null
  br i1 %21, label %22, label %26

22:                                               ; preds = %17
  %23 = load i32, i32* @AV_LOG_ERROR, align 4
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @av_log(i32* null, i32 %23, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0), i32 %24)
  store i32 0, i32* %3, align 4
  br label %43

26:                                               ; preds = %17
  br label %27

27:                                               ; preds = %31, %26
  %28 = load i32*, i32** %6, align 8
  %29 = call i32* @avcodec_descriptor_next(i32* %28)
  store i32* %29, i32** %6, align 8
  %30 = icmp ne i32* %29, null
  br i1 %30, label %31, label %38

31:                                               ; preds = %27
  %32 = load i32*, i32** %6, align 8
  %33 = load i32**, i32*** %7, align 8
  %34 = load i32, i32* %9, align 4
  %35 = add i32 %34, 1
  store i32 %35, i32* %9, align 4
  %36 = zext i32 %34 to i64
  %37 = getelementptr inbounds i32*, i32** %33, i64 %36
  store i32* %32, i32** %37, align 8
  br label %27

38:                                               ; preds = %27
  %39 = load i32, i32* %8, align 4
  %40 = load i32*, i32** %5, align 8
  store i32 %39, i32* %40, align 4
  %41 = load i32**, i32*** %7, align 8
  %42 = load i32***, i32**** %4, align 8
  store i32** %41, i32*** %42, align 8
  store i32 1, i32* %3, align 4
  br label %43

43:                                               ; preds = %38, %22
  %44 = load i32, i32* %3, align 4
  ret i32 %44
}

declare dso_local i32* @avcodec_descriptor_next(i32*) #1

declare dso_local i32** @av_calloc(i32, i32) #1

declare dso_local i32 @av_log(i32*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
